--- a/index.html
+++ b/index.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="reset.css">
 </head>
 <body>
-    
+    <div class="header">
+        <img src="images/capybara-logo.png" alt="Capybara Head">
+        <ul class="links">
+            <li>header link one</li>
+            <li>header link two</li>
+            <li>header link three</li>
+        </ul>
+    </div>
+    <div class="hero">
+        <h1>This website is awesome</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, ad commodi quasi tempore rem sunt ut! Itaque ipsa maxime porro enim, officiis cupiditate tempore facere, laborum ullam illo eveniet labore.</p>
+        <button>Sign up</button>
+    </div>
 </body>
 </html>
