add capybara-hero.jpg, style here

--- a/index.html
+++ b/index.html
@@ -11,15 +11,19 @@
     <div class="header">
         <img src="images/capybara-logo.png" alt="Capybara Head">
         <ul class="links">
-            <li>header link one</li>
-            <li>header link two</li>
-            <li>header link three</li>
+            <li>About</li>
+            <li>Adopt a Capybara</li>
+            <li>Support us</li>
         </ul>
     </div>
-    <div class="hero">
-        <h1>This website is awesome</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, ad commodi quasi tempore rem sunt ut! Itaque ipsa maxime porro enim, officiis cupiditate tempore facere, laborum ullam illo eveniet labore.</p>
-        <button>Sign up</button>
+    <div class="hero-container">
+        <div class="hero">
+        <h1>Capybaras are awesome</h1>
+        <p>
+            The capybara is the world's largest living rodent. Capybaras are proficient swimmers, swimming with only their nostrils, eyes, and ears above the surface. They are also known to swim underwater, sometimes for considerable distances.</p>
+        <button>Adopt</button>
+    </div>
+    <img src="images/capybara-hero.jpg" alt="A picture of a capybara in water">
     </div>
 </body>
 </html>
