--- a/index.html
+++ b/index.html
@@ -25,5 +25,26 @@
     </div>
     <img src="images/capybara-hero.jpg" alt="A picture of a capybara in water">
     </div>
+    <h2>Some random information.</h2>
+    <div class="content">
+        <ul class="cards">
+            <li>
+                <img src="" alt="">
+                <p>this is some subtext under an illustration or image</p>
+            </li>
+            <li>
+                <img src="" alt="">
+                <p>this is some subtext under an illustration or image</p>
+            </li>
+            <li>
+                <img src="" alt="">
+                <p>this is some subtext under an illustration or image</p>
+            </li>
+            <li>
+                <img src="" alt="">
+                <p>this is some subtext under an illustration or image</p>
+            </li>
+        </ul>
+    </div>
 </body>
 </html>
