add capybara card images, style cards

--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
     <div class="content">
         <ul class="cards">
             <li>
-                <img src="" alt="">
+                <img src="images/capybara-relaxing.jpg" alt="">
                 <p>this is some subtext under an illustration or image</p>
             </li>
             <li>
-                <img src="" alt="">
+                <img src="images/capybara-friends.jpg" alt="">
                 <p>this is some subtext under an illustration or image</p>
             </li>
             <li>
-                <img src="" alt="">
+                <img src="images/capybara-sleeping.jpg" alt="">
                 <p>this is some subtext under an illustration or image</p>
             </li>
             <li>
-                <img src="" alt="">
+                <img src="images/capybara-drinking.jpg" alt="">
                 <p>this is some subtext under an illustration or image</p>
             </li>
         </ul>
