--- a/index.html
+++ b/index.html
@@ -46,5 +46,9 @@
             </li>
         </ul>
     </div>
+    <div class="quote">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis esse nisi pariatur unde natus nesciunt dolorem ipsum magnam, corrupti sed dolor quia assumenda deleniti optio asperiores voluptatum nihil alias tempore.</p>
+        <h3>- Capybara</h3>
+    </div>
 </body>
 </html>
