--- a/index.html
+++ b/index.html
@@ -50,5 +50,17 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis esse nisi pariatur unde natus nesciunt dolorem ipsum magnam, corrupti sed dolor quia assumenda deleniti optio asperiores voluptatum nihil alias tempore.</p>
         <h3>- Capybara</h3>
     </div>
+    <div class="button-container">
+        <div class="banner">
+            <div>
+                <h4>Adopt a Capybara! It's time!</h4>
+                <p>Aquire about adopting your own capybara by clicking that button over there!</p>
+            </div>
+            <button>Sign up</button>
+        </div>
+    </div>
+    <div class="footer">
+        <p>Copyright © Asteriye 2023</p>
+    </div>
 </body>
 </html>
